# GraphicsAlgorithm

./: CMakeLists.txt  README.md  main.cpp
Headers/: DrawLine.h  Model.hpp  Shader.hpp  Texture.hpp
Resources/: screen.txt
Shaders/: fragmentShader.glsl  vertexShader.glsl
